[package]
authors.workspace = true
categories = ["api-bindings"]
description = "Functions and constants for validating request parameters"
edition.workspace = true
homepage = "https://twilight.rs/"
include.workspace = true
keywords = ["discord", "discord-api", "twilight"]
license.workspace = true
name = "twilight-validate"
publish = true
repository.workspace = true
rust-version.workspace = true
version = "0.14.1"

[dependencies]
twilight-model = { default-features = false, path = "../twilight-model", version = "0.15.0-rc.1" }

[dev-dependencies]
static_assertions = { default-features = false, version = "1.1.0" }
