[package]
authors.workspace = true
description = "Advertisement crate for the twilight ecosystem; please use the individual crates instead."
edition.workspace = true
homepage = "https://twilight.rs"
include.workspace = true
keywords = ["discord", "discord-api", "twilight"]
license.workspace = true
name = "twilight"
publish = true
repository.workspace = true
rust-version.workspace = true
version = "0.14.0"

[dev-dependencies]
anyhow = { default-features = false, features = ["std"], version = "1" }
futures = { default-features = false, version = "0.3" }
tokio = { default-features = false, features = ["macros", "rt-multi-thread"], version = "1.0" }
twilight-cache-inmemory = { default-features = false, path = "../twilight-cache-inmemory", version = "0.14.1" }
twilight-gateway = { default-features = false, features = ["rustls-native-roots"], path = "../twilight-gateway", version = "0.14.0" }
twilight-gateway-queue = { default-features = false, path = "../twilight-gateway-queue", version = "0.14.0" }
twilight-http = { default-features = false, features = ["rustls-native-roots"], path = "../twilight-http", version = "0.14.0" }
twilight-http-ratelimiting = { default-features = false, path = "../twilight-http-ratelimiting", version = "0.14.0" }
twilight-lavalink = { default-features = false, path = "../twilight-lavalink", version = "0.14.0" }
twilight-mention = { default-features = false, path = "../twilight-mention", version = "0.14.0" }
twilight-model = { default-features = false, path = "../twilight-model", version = "0.14.1" }
twilight-standby = { default-features = false, path = "../twilight-standby", version = "0.14.0" }
twilight-util = { default-features = false, path = "../twilight-util", version = "0.14.1" }
twilight-validate = { default-features = false, path = "../twilight-validate", version = "0.14.1" }
