[package]
authors = ["Twilight Contributors"]
categories = []
description = "Miscellaneous utilities for Twilight."
documentation = "https://docs.rs/twilight-util"
edition = "2018"
homepage = "https://twilight.rs"
include = ["src/**/*.rs", "Cargo.toml"]
keywords = ["discord", "discord-api", "twilight"]
license = "ISC"
name = "twilight-util"
publish = false
readme = "README.md"
repository = "https://github.com/twilight-rs/twilight.git"
version = "0.2.0"

[features]
default = []
link = ["twilight-model"]
snowflake = ["twilight-model"]
full = ["link", "snowflake"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
twilight-model = { path = "../model", default-features = false, optional = true }

[dev-dependencies]
chrono = { default-features = false, version = "0.4", features = ["std"] }
static_assertions = { default-features = false, version = "1" }
time = { default-features = false, version = "0.2" }
