[package]
authors = ["Twilight Contributors"]
categories = []
description = "Miscellaneous utilities for Twilight."
documentation = "https://docs.rs/twilight-util"
edition = "2021"
homepage = "https://twilight.rs"
include = ["src/**/*.rs", "Cargo.toml", "README.md"]
keywords = ["discord", "discord-api", "twilight"]
license = "ISC"
name = "twilight-util"
publish = false
readme = "README.md"
repository = "https://github.com/twilight-rs/twilight.git"
rust-version = "1.57"
version = "0.8.2"

[dependencies]
twilight-model = { default-features = false, optional = true, path = "../model" }

[dev-dependencies]
static_assertions = { default-features = false, version = "1" }

[features]
default = []
builder = ["twilight-model"]
link = ["twilight-model"]
permission-calculator = ["twilight-model"]
full = ["builder", "link", "permission-calculator"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
