[package]
authors = ["Twilight Contributors"]
categories = []
description = "Miscellaneous utilities for Twilight."
documentation = "https://docs.rs/twilight-util"
edition = "2021"
homepage = "https://twilight.rs"
include = ["src/**/*.rs", "Cargo.toml", "README.md"]
keywords = ["discord", "discord-api", "twilight"]
license = "ISC"
name = "twilight-util"
publish = false
readme = "README.md"
repository = "https://github.com/twilight-rs/twilight.git"
rust-version = "1.57"
version = "0.10.1"

[dependencies]
twilight-model = { default-features = false, optional = true, path = "../model" }
twilight-validate = { default-features = false, optional = true, path = "../validate" }

[dev-dependencies]
chrono = { default-features = false, features = ["std"], version = "0.4" }
static_assertions = { default-features = false, version = "1" }
time = { default-features = false, features = ["formatting"], version = "0.3" }

[features]
default = []
builder = ["twilight-model", "twilight-validate"]
link = ["twilight-model"]
permission-calculator = ["twilight-model"]
snowflake = ["twilight-model"]
full = ["builder", "link", "permission-calculator", "snowflake"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
