[package]
authors = ["Twilight Contributors"]
categories = ["api-bindings"]
description = "Functions and constants for validating request parameters"
documentation = "https://docs.rs/twilight-validate"
edition = "2021"
homepage = "https://twilight.rs/"
include = ["src/**/*.rs", "Cargo.toml"]
keywords = ["discord", "discord-api", "twilight"]
license = "ISC"
name = "twilight-validate"
publish = false
readme = "README.md"
repository = "https://github.com/twilight-rs/twilight.git"
rust-version = "1.57"
version = "0.10.1"

[dependencies]
twilight-model = { default-features = false, path = "../model" }

[dev-dependencies]
static_assertions = { default-features = false, version = "1.1.0" }
